# correct_button

./: CMakeLists.txt  Makefile  Mylabel.cpp  Mylabel.h  camera.cpp  camera.h  capture.cpp  capture.h  common.cpp  common.h  crc32.h  init.txt  main.cpp  main0104.cpp  main1202.cpp  main1223.cpp  main_2rects_rotation (1208).cpp  main_2rects_rotation (复件1205).cpp  main_2rects_rotation.cpp  main_new.cpp  mainwindow.cpp  mainwindow.h  match.cpp  match.h  mythread.cpp  mythread.h  program  program2019  rect_image.cpp  rect_image.h  serial.cpp  serial.h  start.sh  test.cpp  方向识别通讯协议V1.6.docx  系统配置及调试记录
20180706/: init (复件).txt  init.txt  log.txt  params.txt
20180706/model/: model.txt
20180706/model/1/: model.txt
USBupdate/: CMakeCache.txt  CMakeLists.txt  Makefile  UpDate.sh  cmake_install.cmake  start  start.cbp  update.cbp  update.cpp  update.txt
annular/: main.cpp  match.cpp  rect_image.cpp
systemCheck/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  systemCheck  systemCheck.cbp
systemEncryption/: CMakeLists.txt  main.cpp
